fix registration link covering login button

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -123,7 +123,7 @@ span{
   cursor: pointer;
 }
 
-p.note { 
+p.note {
   text-align: center;
   color: $input-letter;
   margin-bottom: 30px;
@@ -132,4 +132,15 @@ p.note {
 
 p.note > span {
   text-decoration: underline;
+}
+
+.registration_link {
+  position: absolute;
+  top: 70%;
+  left: 58%;
+  width: 620px;
+  padding: 40px 80px;
+  transform: translate(-50%, -50%);
+  align-content: center;
+  align-items: center;
 }
